[gd_scene load_steps=6 format=3 uid="uid://cg6uqcyvv81dm"]

[ext_resource type="Script" uid="uid://4s41gxo0p4n3" path="res://Scripts/AI/Boss/Black_Baron_phase_1.gd" id="1_jwi80"]
[ext_resource type="Texture2D" uid="uid://dh6uqqctb7upk" path="res://Sprites/Boss/Black_Baron/Phase_1/Spiked_ball.png" id="1_wxf3o"]

[sub_resource type="Animation" id="Animation_n1b30"]
resource_name = "flying_robot_flame"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cvil1"]
_data = {
&"flying_robot_flame": SubResource("Animation_n1b30")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvtif"]
size = Vector2(1500, 1000)

[node name="Black_baron_phase_1" type="CharacterBody2D" node_paths=PackedStringArray("animation_player", "death_effect_marker", "timer_immortality_frames")]
collision_layer = 2
collision_mask = 12
platform_on_leave = 2
script = ExtResource("1_jwi80")
atk = 4
time_get_back_to_top = 1.3
animation_player = NodePath("AnimationPlayer")
hp = 15
def = 2
speed = 470.0
death_effect_marker = NodePath("Death_effect_marker")
timer_immortality_frames = NodePath("Timer_immortality_frames")
immortality_frames = true
mirror_sprite = false
unique_death_effect_path = "res://Scenes/Effects/Big_enemy_boom.tscn"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(0.96, 0.96)
polygon = PackedVector2Array(-33, -9, -46, -49, -9, -33, 0, -49, 9, -33, 46, -49, 33, -9, 49, 0, 33, 9, 46, 49, 9, 33, 0, 49, -9, 33, -46, 49, -33, 9, -49, 0)

[node name="Attack_area" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Attack_area"]
scale = Vector2(0.97, 0.97)
polygon = PackedVector2Array(-33, -9, -46, -49, -9, -33, 0, -49, 9, -33, 46, -49, 33, -9, 49, 0, 33, 9, 46, 49, 9, 33, 0, 49, -9, 33, -46, 49, -33, 9, -49, 0)
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_wxf3o")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cvil1")
}
speed_scale = 0.5

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_rvtif")
debug_color = Color(0, 0.596078, 0.701961, 0)

[node name="Timer_immortality_frames" type="Timer" parent="."]

[node name="Death_effect_marker" type="Marker2D" parent="."]

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(18.2, 14.6)

[connection signal="body_entered" from="Attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer_immortality_frames" to="." method="_on_timer_immortality_timeout"]
